Implementação de manutenação das aplicações.